package livenet

import "github.com/oipwg/proto/go/pb_oip5/pb_templates"

type RegisteredPublisher = pb_templates.Tmpl_433C2783

type Coin = pb_templates.Tmpl_29F96711
type SimpleCoinSale = pb_templates.Tmpl_DE84D583
type CommercialContent = pb_templates.Tmpl_D8D0F22C

type Song = pb_templates.Tmpl_2670B072
